<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ib_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/content_cancel_dialog"
        android:layout_marginTop="@dimen/margin_other_standard"
        app:srcCompat="@drawable/ic_cancel_black_24dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ib_cancel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_other_standard"
        android:text="@string/text_are_you_sure"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="32sp" />

    <Button
        android:id="@+id/btn_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/cancel_background"
        android:textColor="@color/colorAccented"
        android:layout_marginTop="@dimen/margin_other_standard"
        android:layout_marginBottom="16dp"
        android:text="@string/text_yes" />


</RelativeLayout>