<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitActivity"
        android:background="#000"
    >
    <include
        layout="@layout/custom_toolbar"
        android:id ="@+id/detoolbar">
    </include>
<LinearLayout
    android:layout_below="@id/detoolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/linear_layout"
    android:layout_marginTop="@dimen/margin_last_standard">


    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="0dp"
        android:layout_marginLeft="@dimen/margin_other_standard"
        android:layout_marginStart="@dimen/margin_other_standard"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:padding="@dimen/margin_standard"
        android:background="@drawable/edittext_background"
        android:inputType="textPersonName"
        android:hint="@string/hint_first_name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_marginRight="@dimen/margin_other_standard"
        android:layout_marginLeft="@dimen/margin_other_standard"
        android:layout_width="0dp"
        android:padding="@dimen/margin_standard"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:background="@drawable/edittext_background"
        android:inputType="textPersonName"
        android:hint="@string/hint_last_name"
        android:importantForAutofill="no" />
</LinearLayout>
    <EditText
        android:id="@+id/et_email_address"
        android:layout_below="@id/linear_layout"
        android:padding="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_last_standard"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_other_standard"
        android:layout_marginRight="@dimen/margin_other_standard"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/edittext_background"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email_address"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_project"
        android:layout_below="@id/et_email_address"
        android:layout_marginTop="@dimen/margin_last_standard"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_other_standard"
        android:layout_marginRight="@dimen/margin_other_standard"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/edittext_background"
        android:inputType="textPersonName"
        android:padding="@dimen/margin_standard"
        android:hint="@string/hint_project"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_below="@id/et_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_last_standard"
        android:background="@drawable/submit_background"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/text_submit"
        android:textAllCaps="false"
        />
</RelativeLayout>